# barecat

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  conf_spec.py  index.rst
docs/explanation/: architecture.rst  comparison.rst  integrity.rst  performance.rst
docs/howto/: automatic-encoding.rst  convert-archives.rst  merge-archives.rst  mount-fuse.rst  pytorch-dataloader.rst  shell-completions.rst  verify-repair.rst
docs/reference/: cli.rst  file-format.rst  python-api.rst
docs/tutorials/: getting-started.rst  image-datasets.rst
src/barecat/: __init__.py  __main__.py  _api.py  _version.py  archive_formats.py  cli_impl.py  common.py  defrag.py  exceptions.py  from_tar_stream.py  to_tar_stream.py  upgrade_database.py  upgrade_database2.py  util.py
src/barecat/cli/: commands.py  completions.py  impl.py  legacy.py  main.py  shell.py
src/barecat/completions/: __init__.py  barecat.bash  barecat.zsh
src/barecat/core/: barecat.py  index.py  paths.py  sharder.py  types.py
src/barecat/cython/: barecat.c  barecat.h  barecat_cython.c  barecat_cython.pyx
src/barecat/formats/: archive_formats.py  from_tar_stream.py  to_tar_stream.py
src/barecat/io/: __init__.py  codecs.py  copyfile.py  fileobj.py  open.py
src/barecat/maintenance/: complete_database.py  defrag.py  merge.py  reshard.py  rsync.py  upgrade_database.py  upgrade_database2.py
src/barecat/man/: barecat.1
src/barecat/sql/: indexes.sql  schema.sql  triggers.sql
src/barecat/tui/: browse.py  ncdu.py
src/barecat/util/: consumed_threadpool.py  glob_helper.py  glob_to_regex.py  list_files.py  misc.py  physical_order.py  progbar.py  threading.py
tests/: test_barecat.py  test_cli.py  test_codecs.py  test_copyfile.py  test_dict_api.py  test_edge_cases.py  test_fileobj_api.py  test_glob_compliance.py  test_glob_to_regex_hypothesis.py  test_glob_to_sqlite.py  test_index.py  test_merge.py  test_open.py  test_rsync.py  test_shell.py
