[build-system]
requires = ["setuptools>=42", "wheel", "cython>=3.0.0", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "barecat"
version = "0.2.2"
description = """
Efficient dataset storage format through barebones concatenation of binary files
and an SQLite index. Optimized for fast random access in machine learning workloads.
"""
authors = [
    { name = "István Sárándi", email = "istvan.sarandi@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

dependencies = [
    "multiprocessing-utils",
    "tqdm",
    "crc32c"
]

[project.scripts]
barecat-create = "barecat.cli:create"
barecat-extract = "barecat.cli:extract"
barecat-merge = "barecat.cli:merge"
barecat-merge-symlink = "barecat.cli:merge_symlink"
barecat-extract-single = "barecat.cli:extract_single"
barecat-index-to-csv = "barecat.cli:index_to_csv"
barecat-verify = "barecat.cli:verify_integrity"
barecat-to-ncdu-json = "barecat.cli:print_ncdu_json"
archive2barecat = "barecat.cli:archive2barecat"
barecat2archive = "barecat.cli:barecat2archive"
barecat-defrag = "barecat.cli:defrag"
barecat-create-recursive = "barecat.cli:create_recursive"
barecat-viewer = "barecat.viewerqt6:main"
barecat-upgrade-database = "barecat.upgrade_database:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 99
skip-string-normalization = true
