[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "setuptools_scm[toml]>=8"
]
build-backend = "setuptools.build_meta"

[project]
name = "barecat"
dynamic = ["version"]
description = "Scalable archive format for storing millions of small files with random access and SQLite indexing."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
    { name = "István Sárándi", email = "istvan.sarandi@gmail.com" }
]

dependencies = [
    "multiprocessing-utils",
    "tqdm",
    "crc32c"
]

keywords = [
    "sqlite",
    "dataset",
    "storage",
    "archive",
    "random-access",
    "image-dataset",
    "filesystem",
    "key-value-store",
    "deep-learning",
    "data-loader",
    "file-indexing"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Archiving",
    "Topic :: System :: Filesystems",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux"
]

[project.scripts]
barecat = "barecat.cli.main:main"
barecat-create = "barecat.cli.legacy:create"
barecat-extract = "barecat.cli.legacy:extract"
barecat-merge = "barecat.cli.legacy:merge"
barecat-merge-symlink = "barecat.cli.legacy:merge_symlink"
barecat-extract-single = "barecat.cli.legacy:extract_single"
barecat-index-to-csv = "barecat.cli.legacy:index_to_csv"
barecat-verify = "barecat.cli.legacy:verify_integrity"
barecat-to-ncdu-json = "barecat.cli.legacy:print_ncdu_json"
archive2barecat = "barecat.cli.legacy:archive2barecat"
barecat2archive = "barecat.cli.legacy:barecat2archive"
barecat-defrag = "barecat.cli.legacy:defrag"
barecat-create-recursive = "barecat.cli.legacy:create_recursive"
barecat-upgrade-database = "barecat.maintenance.upgrade_database:main"

[project.urls]
Homepage = "https://github.com/isarandi/barecat"
Documentation = "https://istvansarandi.com/docs/barecat/api/barecat/Barecat.html"
Repository = "https://github.com/isarandi/barecat"
Issues = "https://github.com/isarandi/barecat/issues"
Author = "https://istvansarandi.com"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
write_to = "src/barecat/_version.py"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
barecat = ["completions/*.bash", "completions/*.zsh", "sql/*.sql", "man/*.1"]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
]
lint = [
    "ruff",
    "pre-commit",
]
docs = [
    "sphinx",
    "sphinxcontrib-bibtex",
    "sphinx-autoapi",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints",
    "sphinxcontrib-prettyspecialmethods",
    "sphinx-autodoc-napoleon-typehints",
    "sphinx-codeautolink",
    "sphinx-rtd-theme",
    "pydata-sphinx-theme",
    "sphinxcontrib-napoleon",
    "Cython",
    "numpy",
    "setuptools-scm",
    "toml",
]
dev = [
    "barecat[test,lint,docs]",
]
mount = [
    "barecat-mount",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 99
target-version = "py39"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]  # line length handled by formatter
